dev:
  * core: "correct sensitivities" now only computes on largest contiguous area
v1.1:
  * bugfix: energy envelope and not velocity seismogram is now divided by filter width
  * bugfix: bulk wave was not correctly handled if beginning of coda window was before S-onset
  * bugfix: seismic moment magnitude now calculated more precisely
  * core: allow to cut the coda at local minimum (useful to cut out aftershocks etc.)
  * imaging: allow to configure grid layout (nx, ny)
v1.0:
  * initial release